--- a/HomeHutBD/Views/Account/VerifyEmail.cshtml
+++ b/HomeHutBD/Views/Account/VerifyEmail.cshtml
@@ -1,9 +1,7 @@
-﻿@using HomeHutBD.ViewModels;
-@model VerifyEmailViewModel;
-
+﻿@model HomeHutBD.ViewModels.VerifyEmailViewModel
 @{
-    ViewData["Title"] = "Verify Email";
     Layout = "~/Views/Shared/_AccountLayout.cshtml";
+    ViewData["Title"] = "Verify Email";
 }
 
 <div class="account-container">
@@ -11,14 +9,17 @@
         <h2 class="text-center mb-4">Verify Email</h2>
         <form asp-action="VerifyEmail" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
             <div class="mb-3">
                 <label asp-for="Email" class="form-label"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
+
             <input type="submit" value="Verify" class="btn btn-success w-100 p-2" />
-            <div class="text-center mt-2">
-                <a asp-controller="Home" asp-action="Index" class="text-decoration-none mt-3">Back</a>
+
+            <div class="text-center mt-3">
+                <a asp-controller="Home" asp-action="Index" class="text-decoration-none">Back</a>
             </div>
         </form>
     </div>
