--- a/HomeHutBD/wwwroot/css/account.css
+++ b/HomeHutBD/wwwroot/css/account.css
@@ -1,8 +1,5 @@
 ﻿.account-container {
-    background-image: url('../images/account-bg.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: repeat-y;
+    background: linear-gradient(to right, #ece9e6, #ffffff);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,11 +8,10 @@
 }
 
 .account-box {
-    background-color: white;
+    background-color: #fff;
     padding: 30px;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     max-width: 500px;
     width: 100%;
-    opacity: .9;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
 }
