--- a/HomeHutBD/Views/Shared/_LoginPartial.cshtml
+++ b/HomeHutBD/Views/Shared/_LoginPartial.cshtml
@@ -1,17 +1,20 @@
-﻿﻿@using Microsoft.AspNetCore.Identity;
-@inject SignInManager<Users> signInManager;
+﻿@{
+    bool isSignedIn = Context.Session.GetInt32("UserId").HasValue;
+    string username = Context.Session.GetString("Username");
+}
 
 <ul class="navbar-nav ms-auto">
-    @if (signInManager.IsSignedIn(User))
+    @if (isSignedIn)
     {
         <li class="nav-item">
-            <a class="btn btn-outline-primary me-2" asp-controller="Account" asp-action="Logout"><i class="fas fa-sign-out-alt"></i>Logout</a>
+            <span class="nav-link text-dark">Hello, @username!</span>
+        </li>
+        <li class="nav-item">
+            <a class="btn btn-outline-primary me-2" asp-controller="Account" asp-action="LogoutGet"><i class="fas fa-sign-out-alt"></i>Logout</a>
         </li>
     }
     else
     {
-        
-        
         <li class="nav-item">
             <a asp-controller="Account" asp-action="Login" class="btn btn-outline-primary me-2"><i class="fas fa-sign-in-alt"></i> Login</a>
         </li>
@@ -19,5 +22,4 @@
             <a asp-controller="Account" asp-action="Register" class="btn btn-primary"><i class="fas fa-user-plus"></i> Register</a>
         </li>
     }
-
 </ul>
