--- a/HomeHutBD/Views/Account/Register.cshtml
+++ b/HomeHutBD/Views/Account/Register.cshtml
@@ -58,6 +58,10 @@
                 Already have an account?
                 <a asp-controller="Account" asp-action="Login" class="text-decoration-none">Login</a>
             </p>
+
+            <div class="text-center mt-3">
+                <a asp-controller="Home" asp-action="Index" class="text-decoration-none">Back</a>
+            </div>
         </form>
     </div>
 </div>
