--- a/HomeHutBD/Views/Account/Login.cshtml
+++ b/HomeHutBD/Views/Account/Login.cshtml
@@ -42,6 +42,12 @@
                 Don't have an account?
                 <a asp-controller="Account" asp-action="Register" class="text-decoration-none">Register</a>
             </p>
+
+
+            <div class="text-center mt-3">
+                <a asp-controller="Home" asp-action="Index" class="text-decoration-none">Back</a>
+            </div>
+
         </form>
     </div>
 </div>
