--- a/HomeHutBD/Views/Account/VerifyEmail.cshtml
+++ b/HomeHutBD/Views/Account/VerifyEmail.cshtml
@@ -19,7 +19,7 @@
             <input type="submit" value="Verify" class="btn btn-success w-100 p-2" />
 
             <div class="text-center mt-3">
-                <a asp-controller="Home" asp-action="Index" class="text-decoration-none">Back</a>
+                <a asp-controller="Account" asp-action="Login" class="text-decoration-none">Back</a>
             </div>
         </form>
     </div>
