--- a/HomeHutBD/Views/Shared/_LoginPartial.cshtml
+++ b/HomeHutBD/Views/Shared/_LoginPartial.cshtml
@@ -6,11 +6,17 @@
 <ul class="navbar-nav ms-auto">
     @if (isSignedIn)
     {
-        <li class="nav-item">
-            <span class="nav-link text-dark">Hello, @username!</span>
-        </li>
-        <li class="nav-item">
-            <a class="btn btn-outline-primary me-2" asp-controller="Account" asp-action="LogoutGet"><i class="fas fa-sign-out-alt"></i>Logout</a>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="fas fa-user-circle me-1"></i> Hello, @username!
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
+                <li><a class="dropdown-item" href="@Url.Action("Profile", "Account")"><i class="fas fa-user me-2"></i>My Profile</a></li>
+                <li><a class="dropdown-item" href="@Url.Action("MyProperties", "Properties")"><i class="fas fa-home me-2"></i>My Properties</a></li>
+                <li><a class="dropdown-item" href="@Url.Action("Index", "Chat")"><i class="fas fa-comments me-2"></i>My Chats</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="@Url.Action("LogoutGet", "Account")"><i class="fas fa-sign-out-alt me-2"></i>Logout</a></li>
+            </ul>
         </li>
     }
     else
