--- a/HomeHutBD/Views/Shared/_Layout.cshtml
+++ b/HomeHutBD/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"><i class="fas fa-home"></i> Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="@Url.Action("Browse", "Properties")"><i class="fas fa-search"></i> Browse Properties</a>
+                            <a class="nav-link" asp-area="" asp-controller="Properties" asp-action="Browse"><i class="fas fa-search"></i> Browse Properties</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="prediction" asp-action="Index"><i class="fas fa-chart-line"></i> Price Prediction</a>
